updated footer to no longer hae overlap

--- a/sample_ecommerce_website/wwwroot/css/site.css
+++ b/sample_ecommerce_website/wwwroot/css/site.css
@@ -52,8 +52,6 @@ button.accept-policy {
       margin-bottom: 60px; }
 
     .footer {
-      position: absolute;
-      bottom: 0;
       width: 100%;
       white-space: nowrap;
       line-height: 60px;
